--- a/Launcher/MainWindow.xaml
+++ b/Launcher/MainWindow.xaml
@@ -1,6 +1,6 @@
 <Window x:Class="SpinWheelApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Spin Wheel" Width="800" Height="800" WindowStyle="None" WindowState="Maximized" Background="Black">
-    <Canvas Name="myCanvas" />
+        Title="WaccaCircleLauncher" Width="1080" Height="1920" WindowStyle="None" WindowState="Maximized" Background="Black">
+    <Canvas Name="ourCanvas" />
 </Window>
